# PenManager

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
docs/: plugin-market-v1.md  plugin-market-v1.zh-CN.md
scripts/: prepare-adb.mjs
src/: App.tsx  backend.ts  main.tsx  state.ts  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  market.rs  models.rs  plugins.rs  terminal.rs  transport.rs
src/components/: AppShell.tsx  ConnectionControl.tsx  EmptyState.tsx
src/pages/: DashboardPage.tsx  DevicePage.tsx  FilesPage.tsx  MarketPage.tsx  PenModsConfigPage.tsx  PerformancePage.tsx  PluginsPage.tsx  SettingsPage.tsx  TerminalPage.tsx
